[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterhub-samlauthenticator-kai"
description = ""
authors = [
    { name = "Hiromasa Ihara", email = "iharahiromasa@gmail.com" }
]
dependencies = [
    "Jinja2>=2.4",
    "jupyterhub>=0.9.0",
    "lxml>=4.2.1",
    "signxml>=2.6.0",
    "pytz>=2019.1",
    "pysaml2>=7.4"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest>=4.0.0",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.0.0"
]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:distutils.*:"
]
